code that my epplets have to E-Cpu and E-NetFlame so they wouldn't be as
CPU-intensive.  E-NetFlame has also been upgraded to v0.3 with bandwidth
patches from Shawn (the author), and it also has a config file option for
which interface to monitor (default "eth0") for those who might want to keep
an eye on ppp0.

-------------------------------------------------------------------------------

Sun Oct 31 15:07:43 PST 1999
(Mandrake)

gave gilbertt access to put screenshoot in CVS.  YOU NEED TO MODIFY THE
CHANGELOG THOUGH.  fixed some warnings here and there.  I don't like warnings

-------------------------------------------------------------------------------

Sun Oct 31 11:36:50 GMT 1999
(gilbertt)

Added E-ScreenShoot. I guess I should include a recent Changelog:
Added dox help, including a couple of images to make things more clear.
Found several bugs in my drawing routines, and squashed them.
Added a couple of new cloak-animations.
Please let me know if you have problems building it.

-------------------------------------------------------------------------------

Sun Oct 31 21:36:50 GMT 1999
(gilbertt)

New cloak-animation - text banner.
Fixed my bouncing ball.
Rand()omised my atoms.

-------------------------------------------------------------------------------

Mon Nov 1 22:06:12 GMT 1999
(gilbertt)

Nothing spectacular:
	Fixed some issues with a couple of cloak-anims
	Added SineWave. Unless I'm feeling wacky sometime, that just about
	does it for cloak-anims. Enough is enough ;-)

-------------------------------------------------------------------------------

Mon Nov 2 18:59:14 GMT 1999
(gilbertt)

Oh dear. There was something terribly wrong with my starfields. I think
there still is, but it's better.

-------------------------------------------------------------------------------

Tue Nov  2 13:31:28 PST 1999
(KainX)

An update from Matt McClanahan <cardinal@dodds.net> to his previous patch.