@@ -226,3 +226,10 @@ Tue Nov  2 13:31:28 PST 1999
 (KainX)
 
 An update from Matt McClanahan <cardinal@dodds.net> to his previous patch.
+
+-------------------------------------------------------------------------------
+
+Tue Nov  2 18:28:36 PST 1999
+(KainX)
+
+A new cloak mode for E-ScreenShoot...random!  You can guess what it does.
